--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>NutriGym Shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3P67NQVHMR"></script>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2755YM1PRT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3P67NQVHMR');
+  gtag('config', 'G-2755YM1PRT');
 </script>
-
+    
 <body>
     <header>
         <div class="container-hero">
