--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
                    <!-- Producto 1 -->
                     <div class="card-product">
                         <div class="container-img">
-                           <img src="imagenes/c4extreme.jpg"alt= "C4 Extreme">
+                            <a href="Producto.html">
+                            <img src="imagenes/c4extreme.jpg"alt= "C4 Extreme">
+                            </a>
                            <span class="discount">-13%</span>
                            <div class="button-group">
                             <span>
