--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </script>
     
 <body>
+    <div id="cookie-notification">
+        <p>Este sitio web utiliza cookies para garantizar que obtenga la mejor experiencia en nuestro sitio web.</p>
+        <button onclick="acceptCookies()">Aceptar</button>
+    </div>
     <header>
         <div class="container-hero">
             <div class="container hero">
@@ -506,7 +510,7 @@
         </div>
     </footer>
 
-      <script 
+      <script src="script.js" 
       src="https://kit.fontawesome.com/b6fba9d152.js" 
       crossorigin="anonymous">
     </script> 
