--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NutriGym Shop</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="En NutriGym Shop, nos dedicamos a proporcionar los mejores suplementos 
+    de gimnasio diseñados para llevar tu rendimiento al siguiente nivel. 
+    Nuestro compromiso es ayudarte a alcanzar tus metas fitness y maximizar tus resultados.">
 </head>
     
 <!-- Google tag (gtag.js) -->
