--- a/index.html
+++ b/index.html
@@ -513,10 +513,12 @@
         </div>
     </footer>
 
-      <script src="script.js" 
+      <script 
       src="https://kit.fontawesome.com/b6fba9d152.js" 
       crossorigin="anonymous">
     </script> 
+
+    <script src="script.js" ></script>
    
     
 </body>
