--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="En NutriGym Shop, nos dedicamos a proporcionar los mejores suplementos 
     de gimnasio diseñados para llevar tu rendimiento al siguiente nivel. 
     Nuestro compromiso es ayudarte a alcanzar tus metas fitness y maximizar tus resultados.">
+    <meta name="keywords" content="suplementos, fitness, nutrición, entrenamiento, salud, gimnasio,
+    ejercicios, aumento de masa, perdida de peso, ropa deportiva, crossfit, powerlifting">
 </head>
     
 <!-- Google tag (gtag.js) -->
