--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NutriGym Shop | Suplementos nutricionales de alta calidad</title>
+    <title>NutriGym Shop Suplementos nutricionales de alta calidad</title>
     <link rel="stylesheet" href="style.css">
     <meta name="description" content="En NutriGym Shop, nos dedicamos a proporcionar los mejores suplementos 
     de gimnasio diseñados para llevar tu rendimiento al siguiente nivel. 
