se agrego el apartado de reseñas

--- a/Producto.html
+++ b/Producto.html
@@ -80,6 +80,22 @@
                     Formulado para apoyar con energía, bombeos y resistencia.
                 </p>
             </div>
+            <!-- Nuevo apartado para reseñas -->
+<div class="reseñas">
+    <h4>Reseñas de clientes</h4>
+    <!-- Aquí puedes agregar cada reseña como bloques individuales -->
+    <div class="reseña">
+        <p class="nombre">Juan Pérez</p>
+        <p class="fecha">Enero 2023</p>
+        <p class="comentario">¡Excelente producto! Realmente me ayudó a mejorar mi rendimiento en el gimnasio.</p>
+    </div>
+
+    <div class="reseña">
+        <p class="nombre">María Gómez</p>
+        <p class="fecha">Febrero 2023</p>
+        <p class="comentario">Me encanta cómo me da ese impulso extra antes de entrenar. ¡Altamente recomendado!</p>
+    </div>
+
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
