--- a/Producto.html
+++ b/Producto.html
@@ -88,6 +88,14 @@
                 <div class="btn">
                     <a href="#">Añadir al carrito</a>
                 </div>
+                <div>
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                        <input type="hidden" name="cmd" value="_s-xclick" />
+                        <input type="hidden" name="hosted_button_id" value="PQWMW922HVDHA" />
+                        <input type="hidden" name="currency_code" value="MXN" />
+                        <input type="image" src="https://www.paypalobjects.com/es_XC/i/btn/btn_buynow_SM.gif" border="0" name="submit" title="PayPal es una forma segura y fácil de pagar en línea." alt="Comprar ahora" />
+                      </form>
+                </div>
             </div>
         </div>
     </div>
