--- a/Producto.html
+++ b/Producto.html
@@ -15,6 +15,7 @@
 
   gtag('config', 'G-2755YM1PRT');
 </script>
+<script src="https://www.paypal.com/sdk/js?client-id=AVe6UhwhOh1pJsjkJXD11w7p4JdLenXhTrxKEoM0iBkfhrdvRVQ_rKCgsNjUj2ak2ArGD9NysTUPbf5E"></script>
 <body>
     <header>
         <div class="container-hero">
@@ -86,18 +87,32 @@
                     <span>350</span>
                 </div>
                 <div class="btn">
-                    <a href="#">Añadir al carrito</a>
-                </div>
-                <div>
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                        <input type="hidden" name="cmd" value="_s-xclick" />
-                        <input type="hidden" name="hosted_button_id" value="PQWMW922HVDHA" />
-                        <input type="hidden" name="currency_code" value="MXN" />
-                        <input type="image" src="https://www.paypalobjects.com/es_XC/i/btn/btn_buynow_SM.gif" border="0" name="submit" title="PayPal es una forma segura y fácil de pagar en línea." alt="Comprar ahora" />
-                      </form>
+                    <a href="#">Pagar con</a>
+                    <div id="paypal-button-container"></div>
+                    
                 </div>
             </div>
         </div>
+        <script>
+            paypal.Buttons({
+                createOrder: function(data, actions) {
+                    return actions.order.create({
+                        purchase_units: [{
+                            amount: {
+                                value: '350.00'
+                            }
+                        }]
+                    });
+                },
+                onApprove: function(data, actions) {
+                    return actions.order.capture().then(function(details) {
+                        alert('Pago completado. ¡Gracias por tu compra!');
+                        // Puedes agregar aquí lógica adicional después de completar el pago
+                    });
+                }
+            }).render('#paypal-button-container');
+        </script>
+
     </div>
 
     <footer class="footer">
