--- a/Login.html
+++ b/Login.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
-<html lang="es">
-    
-<head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3P67NQVHMR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<html lang="en">
 
-  gtag('config', 'G-3P67NQVHMR');
-</script>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="Estilos.css">
+    <title>Log in</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <section class="form-main">
-        <div class="form-content">
-            <div class="circle-1"></div>
-            <div class="circle-2"></div>
-            <div class="circle-3"></div>
-            <div class="box">
-                <h3>Bienvenido a NutryGymShop</h3>
-                <form action="">
-                    <div class="input-box">
-                        <input type="text" placeholder="Correo" class="input-control">
-                    </div>
-                    <div class="input-box">
-                        <input type="password" placeholder="Password" class="input-control">
-                        <div class="input-link">
-                            <a href="" class="gradient-text">Has olvidado tu contraseña</a>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn">Iniciar Sesion</button>
-                </form>
-                <p>No tienes una cuenta? <a href="Registrarse.html" class="gradient-text">Crear cuenta</a></p>
+    
+    <div class="wrapper">
+        <form action="">
+            <h1>Iniciar sesion</h1>
+            <div class="input-box">
+                <input type="text" placeholder="Nombre de usuario"
+                required>
+                <i class='bx bxs-user'></i>
             </div>
-        </div>
-    </section>
+            <div class="input-box">
+                <input type="password" placeholder="Contraseña"
+                required>
+                <i class='bx bxs-lock-alt'></i>
+            </div>
+
+            <div class="remember-forgot">
+                <label><input type="checkbox"> Recordar</label>
+            </div>
+
+            <button type="submit" class="btn">Iniciar sesion</button>
+
+            <div class="register-link">
+                <p>¿No tienes cuenta? <a href="signup.html">Registrate</a></p>
+            </div>
+        </form>
+    </div>
+
 </body>
 </html>
