Corregí link de registro

--- a/Login.html
+++ b/Login.html
@@ -31,7 +31,7 @@
             <button type="submit" class="btn">Iniciar sesion</button>
 
             <div class="register-link">
-                <p>¿No tienes cuenta? <a href="signup.html">Registrate</a></p>
+                <p>¿No tienes cuenta? <a href="Registro.html">Registrate</a></p>
             </div>
         </form>
     </div>
