--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <li><a href="#">Productos</a></li>
                     <li><a href="#">Lista de Deseos</a></li>
                     <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Registro</a></li>
+                    <li><a href="Login.html">Login</a></li>
+                    <li><a href="Registro.html">Registro</a></li>
                 </ul>
                 <form class="search-form">
                     <input type="search" placeholder="Buscar..."/>
