--- a/Registro.html
+++ b/Registro.html
@@ -25,7 +25,12 @@
                 <input type="password" placeholder="Contraseña"
                 required>
             </div>
-            <button type="submit" class="btn">Registrarse</button>
+            <!--<button type="submit" class="btn">Registrarse</button>-->
+            <div class="Registrarse">
+                <button type="submit" class="btn">
+                <a href="index.html">Registrar</a>
+                </button>
+            </div>
 
             <div class="register-link">
                 <p>¿Ya tienes cuenta? <a href="Login.html">Iniciar sesion</a></p>
