--- a/Login.html
+++ b/Login.html
@@ -10,36 +10,35 @@
 </head>
 
 <body>
-
+    
     <div class="wrapper">
-        <form action="">
-            <h1>Iniciar sesion</h1>
+        <form id="loginForm">
+            <h1>Iniciar sesión</h1>
             <div class="input-box">
-                <input type="text" placeholder="Nombre de usuario" required>
+                <input type="text" id="username" placeholder="Nombre de usuario" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Contraseña" required>
+                <input type="password" id="password" placeholder="Contraseña" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
             <div class="remember-forgot">
                 <label><input type="checkbox"> Recordar</label>
             </div>
-            <!--<button type="submit" class="btn">Iniciar sesion</button>-->
+
 
             <div class="login">
-                <button type="submit" class="btn">
-                    <a href="index.html">Iniciar sesion</a>
-                </button>
+                <button type="button" class="btn" onclick="iniciarSesion()">Iniciar sesión</button>
             </div>
 
             <div class="register-link">
-                <p>¿No tienes cuenta? <a href="Registro.html">Registrate</a></p>
+                <p>¿No tienes cuenta? <a href="Registro.html">Regístrate</a></p>
             </div>
         </form>
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
