--- a/Registro.html
+++ b/Registro.html
@@ -4,39 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Registro</title>
     <link rel="stylesheet" href="Estilos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     
     <div class="wrapper">
-        <form action="">
+        <form id="registroForm">
             <h1>Registrarse</h1>
             <div class="input-box">
-                <input type="text" placeholder="Nombre de usuario"
-                required>
+                <input type="text" id="registroUsername" placeholder="Nombre de usuario" required>
+                <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="text" placeholder="Correo electrónico"
-                required>
+                <input type="text" id="email" placeholder="Correo electrónico" required>
+                <i class='bx bxs-envelope'></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Contraseña"
-                required>
-            </div>
-            <!--<button type="submit" class="btn">Registrarse</button>-->
-            <div class="Registrarse">
-                <button type="submit" class="btn">
-                <a href="index.html">Registrar</a>
-                </button>
+                <input type="password" id="registroPassword" placeholder="Contraseña" required>
+                <i class='bx bxs-lock-alt'></i>
             </div>
 
+            <div class="Registrarse">
+                <button type="button" class="btn" onclick="registrarUsuario()">Registrar</button>
+            </div>
+            
             <div class="register-link">
-                <p>¿Ya tienes cuenta? <a href="Login.html">Iniciar sesion</a></p>
+                <p>¿Ya tienes cuenta? <a href="Login.html">Iniciar sesión</a></p>
             </div>
         </form>
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
