Agregue los .html de productos

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
                    <!-- Producto 2 -->
                    <div class="card-product">
                     <div class="container-img">
+                        <a href="producto2.html"></a>
                        <img src="imagenes/muscletech-nitro-tech-100_-whey-gold-5lb_2.jpg"alt= "Nitro Tech 100">
                        <div class="button-group">
                         <span>
