Redireccione cada producto

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                    <!-- Producto 2 -->
                    <div class="card-product">
                     <div class="container-img">
-                        <a href="producto2.html"></a>
-                       <img src="imagenes/muscletech-nitro-tech-100_-whey-gold-5lb_2.jpg"alt= "Nitro Tech 100">
+                        <a href="producto2.html">
+                       <img src="imagenes/muscletech-nitro-tech-100_-whey-gold-5lb_2.jpg"alt= "Nitro Tech 100"></a>
                        <div class="button-group">
                         <span>
                             <i class="fa-regular fa-eye"></i>
@@ -210,7 +210,8 @@
                 <!-- Producto 3 -->
                 <div class="card-product">
                     <div class="container-img">
-                       <img src="imagenes/37377b667a3a6e875c35d5e351bc438f.jpg"alt= "Sujetador Deportivo Fraction">
+                        <a href="producto3.html">
+                       <img src="imagenes/37377b667a3a6e875c35d5e351bc438f.jpg"alt= "Sujetador Deportivo Fraction"></a>
                        <div class="button-group">
                         <span>
                             <i class="fa-regular fa-eye"></i>
@@ -241,7 +242,8 @@
                 <!-- Producto 4 -->
                 <div class="card-product">
                     <div class="container-img">
-                       <img src="imagenes/huracansport-set-5-bandas-elasticas.png"alt= "Bandas Elasticas">
+                        <a href="producto4.html">
+                       <img src="imagenes/huracansport-set-5-bandas-elasticas.png"alt= "Bandas Elasticas"></a>
                        <span class="discount">-10%</span>
                        <div class="button-group">
                         <span>
@@ -273,7 +275,8 @@
                 <!-- Producto 5 -->
                 <div class="card-product">
                     <div class="container-img">
-                       <img src="imagenes/musclefit-cinturon-neopreno_1.jpg"alt= "Cinturon">
+                        <a href="producto5.html">
+                       <img src="imagenes/musclefit-cinturon-neopreno_1.jpg"alt= "Cinturon"></a>
                        <div class="button-group">
                         <span>
                             <i class="fa-regular fa-eye"></i>
@@ -304,7 +307,8 @@
                 <!-- Producto 6 -->
                 <div class="card-product">
                     <div class="container-img">
-                       <img src="imagenes/advancenutrition-hydrotein-5lb.jpg"alt= "Hydrotein">
+                        <a href="producto6.html">
+                       <img src="imagenes/advancenutrition-hydrotein-5lb.jpg"alt= "Hydrotein"></a>
                        <span class="discount">-20%</span>
                        <div class="button-group">
                         <span>
@@ -336,7 +340,8 @@
                 <!-- Producto 7 -->
                 <div class="card-product">
                     <div class="container-img">
-                       <img src="imagenes/gat-nitraflex-black-452gr.jpg"alt= "Nitraflex">
+                        <a href="producto7.html"> 
+                       <img src="imagenes/gat-nitraflex-black-452gr.jpg"alt= "Nitraflex"></a>
                        <div class="button-group">
                         <span>
                             <i class="fa-regular fa-eye"></i>
@@ -367,7 +372,8 @@
                 <!-- Producto 8 -->
                 <div class="card-product">
                     <div class="container-img">
-                       <img src="imagenes/insanelabz-psychotic-black-220gr.jpg"alt= "Psychotic">
+                        <a href="producto8.html"> 
+                       <img src="imagenes/insanelabz-psychotic-black-220gr.jpg"alt= "Psychotic"></a>
                        <div class="button-group">
                         <span>
                             <i class="fa-regular fa-eye"></i>
@@ -398,7 +404,8 @@
                 <!-- Producto 9 -->
                 <div class="card-product">
                     <div class="container-img">
-                       <img src="imagenes/insanelabz-wake-the-dead-smelling-salts.jpg"alt= "Wake Salts">
+                        <a href="producto9.html"> 
+                       <img src="imagenes/insanelabz-wake-the-dead-smelling-salts.jpg"alt= "Wake Salts"></a>
                        <span class="discount">-10%</span>
                        <div class="button-group">
                         <span>
@@ -430,7 +437,8 @@
                 <!-- Producto 10 -->
                 <div class="card-product">
                     <div class="container-img">
-                       <img src="imagenes/muscletech-cell-tech-6lb.jpg"alt= "Creatina Frambuesa">
+                        <a href="producto10.html"> 
+                       <img src="imagenes/muscletech-cell-tech-6lb.jpg"alt= "Creatina Frambuesa"></a>
                        <div class="button-group">
                         <span>
                             <i class="fa-regular fa-eye"></i>
