Agregue datos de productos

--- a/producto3.html
+++ b/producto3.html
@@ -66,25 +66,23 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/37377b667a3a6e875c35d5e351bc438f.jpg" alt="Sujetador Deportivo Fraction">
         </div>
         <div class="details">
             <div class="title">
-                <h3>C4 Extreme <br>
-                    <small>Rendimiento Extremo para Hombres y Mujeres</small>
+                <h3>Sujetador Deportivo Fraction<br>
+                    <small> Flexiona a tu manera con el top corto de Flex Sports. </small>
                 </h3>
             </div>
             <div class="description">
                 <h4>Descripción</h4>
-                <p>Creado para desbloquear energía y resultados de siguiente nivel, C4 Extreme fue formulado con fórmulas limpias, claras y evolucionadas para un pre-entreno de rendimiento explosivo.<br>
-                    200mg de cafeína que brindan energía explosiva ideal para usuarios de nivel intermedio a avanzado en pre-entreno<br>
-                    Formulado para apoyar con energía, bombeos y resistencia.
+                <p>Confeccionado con un tejido sin costuras que capilariza el sudor y se moverá contigo incluso durante el entrenamiento más duro. La silueta que se adapta al cuerpo, el corte y el logotipo llamativo te brindan una pieza base perfecta para crear tu propio estilo.
                 </p>
             </div>
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
-                    <span>350</span>
+                    <span>500</span>
                 </div>
                 <div class="btn">
                     <a href="#">Pagar con</a>
@@ -99,7 +97,7 @@
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: '350.00'
+                                value: '500.00'
                             }
                         }]
                     });
