--- a/producto4.html
+++ b/producto4.html
@@ -66,25 +66,28 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/huracansport-set-5-bandas-elasticas.png" alt="Bandas Elasticas">
         </div>
         <div class="details">
             <div class="title">
-                <h3>C4 Extreme <br>
-                    <small>Rendimiento Extremo para Hombres y Mujeres</small>
+                <h3>Set de 5 bandas elasticas <br>
+                    <small>Bandas de resistencia con 5 niveles.</small>
                 </h3>
             </div>
             <div class="description">
                 <h4>Descripción</h4>
-                <p>Creado para desbloquear energía y resultados de siguiente nivel, C4 Extreme fue formulado con fórmulas limpias, claras y evolucionadas para un pre-entreno de rendimiento explosivo.<br>
-                    200mg de cafeína que brindan energía explosiva ideal para usuarios de nivel intermedio a avanzado en pre-entreno<br>
-                    Formulado para apoyar con energía, bombeos y resistencia.
+                <p>Cada color de las gomas elasticas de musculacion representa diferentes niveles de resistencia: ligero, medio y pesado.
+                    Las diferentes fortalezas le proporcionarán más flexibilidad y más opciones para su rutina de ejercicios. Personalice fácilmente su entrenamiento en función de su fuerza, habilidad y comodidad.
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </p>
             </div>
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
-                    <span>350</span>
+                    <span>310</span>
                 </div>
                 <div class="btn">
                     <a href="#">Pagar con</a>
@@ -99,7 +102,7 @@
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: '350.00'
+                                value: '310.00'
                             }
                         }]
                     });
