--- a/producto5.html
+++ b/producto5.html
@@ -66,7 +66,7 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/musclefit-cinturon-neopreno_1.jpg" alt="Cinturon">
         </div>
         <div class="details">
             <div class="title">
