--- a/producto6.html
+++ b/producto6.html
@@ -66,25 +66,26 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/advancenutrition-hydrotein-5lb.jpg" alt="Hydrotein">
         </div>
         <div class="details">
             <div class="title">
-                <h3>C4 Extreme <br>
-                    <small>Rendimiento Extremo para Hombres y Mujeres</small>
+                <h3>Hydrotein<br>
+                    <small>Hydrotein es la fórmula de proteínas más rápida, pura y avanzada</small>
                 </h3>
             </div>
             <div class="description">
                 <h4>Descripción</h4>
-                <p>Creado para desbloquear energía y resultados de siguiente nivel, C4 Extreme fue formulado con fórmulas limpias, claras y evolucionadas para un pre-entreno de rendimiento explosivo.<br>
-                    200mg de cafeína que brindan energía explosiva ideal para usuarios de nivel intermedio a avanzado en pre-entreno<br>
-                    Formulado para apoyar con energía, bombeos y resistencia.
+                <p>Hydrotein cuenta con enzimas digestivas para mejorar la asimilación 5 Gr BCAA's micronizados y 5 Gr Glutamina.
+                    Además de rápida, Hydrotein es una Proteína de una pureza inigualable. 
+                    Está hecha de 100% Hidrolizado de Proteína de Suero Aislada. Con lo cual no hay exceso de grasa,
+                     colesterol o lactosa que puedan frenar tu crecimiento muscular.
                 </p>
             </div>
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
-                    <span>350</span>
+                    <span>573</span>
                 </div>
                 <div class="btn">
                     <a href="#">Pagar con</a>
@@ -99,7 +100,7 @@
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: '350.00'
+                                value: '573.00'
                             }
                         }]
                     });
