--- a/producto7.html
+++ b/producto7.html
@@ -66,25 +66,23 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/gat-nitraflex-black-452gr.jpg" alt="Nitraflex">
         </div>
         <div class="details">
             <div class="title">
-                <h3>C4 Extreme <br>
-                    <small>Rendimiento Extremo para Hombres y Mujeres</small>
+                <h3>Nitraflex Black Green Apple <br>
+                    <small>Fórmula extrema de pre-entreno</small>
                 </h3>
             </div>
             <div class="description">
                 <h4>Descripción</h4>
-                <p>Creado para desbloquear energía y resultados de siguiente nivel, C4 Extreme fue formulado con fórmulas limpias, claras y evolucionadas para un pre-entreno de rendimiento explosivo.<br>
-                    200mg de cafeína que brindan energía explosiva ideal para usuarios de nivel intermedio a avanzado en pre-entreno<br>
-                    Formulado para apoyar con energía, bombeos y resistencia.
+                <p>NITRAFLEX BLACK es nuestro pre-entreno más poderoso y explosivo hasta el momento. Esta fórmula de alto impacto amplifica la energía y el enfoque con niveles de ingredientes clínicamente validados que mejoran el rendimiento y una mezcla de nootrópicos para mantenerte concentrado mientras obtienes bombeos rompe camisas con una resistencia duradera y una fuerza discordante. Está diseñado para atletas, culturistas y entusiastas del fitness, ¡llevando tu rendimiento al límite! NUEVO NITRAFLEX BLACK alimenta tu entrenamiento con lo último en pre-entrenamiento.
                 </p>
             </div>
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
-                    <span>350</span>
+                    <span>493</span>
                 </div>
                 <div class="btn">
                     <a href="#">Pagar con</a>
@@ -99,7 +97,7 @@
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: '350.00'
+                                value: '493.00'
                             }
                         }]
                     });
