--- a/producto10.html
+++ b/producto10.html
@@ -66,25 +66,23 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/muscletech-cell-tech-6lb.jpg" alt="Creatina Frambuesa">
         </div>
         <div class="details">
             <div class="title">
-                <h3>C4 Extreme <br>
-                    <small>Rendimiento Extremo para Hombres y Mujeres</small>
+                <h3>Cell Tech Sabor Frambuesa <br>
+                    <small>LA FÓRMULA DE CREATINA DEFINITIVA QUE ACTIVA LOS MÚSCULOS MAGROS</small>
                 </h3>
             </div>
             <div class="description">
                 <h4>Descripción</h4>
-                <p>Creado para desbloquear energía y resultados de siguiente nivel, C4 Extreme fue formulado con fórmulas limpias, claras y evolucionadas para un pre-entreno de rendimiento explosivo.<br>
-                    200mg de cafeína que brindan energía explosiva ideal para usuarios de nivel intermedio a avanzado en pre-entreno<br>
-                    Formulado para apoyar con energía, bombeos y resistencia.
+                <p>El combustible adecuado. La cantidad correcta. La fórmula correcta. Cell-Tech ofrece una matriz de aminoácidos + BCAA para ayudarte a pasar menos tiempo recuperándote y más tiempo construyendo músculo.
                 </p>
             </div>
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
-                    <span>350</span>
+                    <span>890</span>
                 </div>
                 <div class="btn">
                     <a href="#">Pagar con</a>
@@ -99,7 +97,7 @@
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: '350.00'
+                                value: '890.00'
                             }
                         }]
                     });
