--- a/producto2.html
+++ b/producto2.html
@@ -66,25 +66,23 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/muscletech-nitro-tech-100_-whey-gold-5lb_2.jpg" alt="Nitro Tech 100">
         </div>
         <div class="details">
             <div class="title">
-                <h3>C4 Extreme <br>
-                    <small>Rendimiento Extremo para Hombres y Mujeres</small>
+                <h3>Nitro Tech 100% Whey Gold <br>
+                    <small>24G DE PROTEÍNA PURA PARA MEJOR MÚSCULO MAGRO</small>
                 </h3>
             </div>
             <div class="description">
                 <h4>Descripción</h4>
-                <p>Creado para desbloquear energía y resultados de siguiente nivel, C4 Extreme fue formulado con fórmulas limpias, claras y evolucionadas para un pre-entreno de rendimiento explosivo.<br>
-                    200mg de cafeína que brindan energía explosiva ideal para usuarios de nivel intermedio a avanzado en pre-entreno<br>
-                    Formulado para apoyar con energía, bombeos y resistencia.
+                <p>Esta fórmula de proteína de suero de leche de acción rápida está fortificada con 5.5g de BCAA y 4g de glutamina, alimenta tus músculos rápidamente, para que puedas seguir desempeñándote en un alto nivel.
                 </p>
             </div>
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
-                    <span>350</span>
+                    <span>998</span>
                 </div>
                 <div class="btn">
                     <a href="#">Pagar con</a>
@@ -99,7 +97,7 @@
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: '350.00'
+                                value: '998.00'
                             }
                         }]
                     });
