--- a/producto8.html
+++ b/producto8.html
@@ -66,25 +66,23 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/insanelabz-psychotic-black-220gr.jpg" alt="Psychotic">
         </div>
         <div class="details">
             <div class="title">
-                <h3>C4 Extreme <br>
-                    <small>Rendimiento Extremo para Hombres y Mujeres</small>
+                <h3>Psychotic Black <br>
+                    <small>Fuerza insana, resultados psicóticos</small>
                 </h3>
             </div>
             <div class="description">
                 <h4>Descripción</h4>
-                <p>Creado para desbloquear energía y resultados de siguiente nivel, C4 Extreme fue formulado con fórmulas limpias, claras y evolucionadas para un pre-entreno de rendimiento explosivo.<br>
-                    200mg de cafeína que brindan energía explosiva ideal para usuarios de nivel intermedio a avanzado en pre-entreno<br>
-                    Formulado para apoyar con energía, bombeos y resistencia.
+                <p> Presentamos la última adición a la familia Psychotic de pre entreno, Psychotic BLACK. Al igual que nuestro OG Psychotic, BLACK te dará mayor concentración, energía insana y potenciará tu producción de fuerza en el gym. Con menos cafeína, Psychotic BLACK es ideal para aquellos que necesitan ese empujón extra pero quieren un estímulo más bajo en el pre.
                 </p>
             </div>
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
-                    <span>350</span>
+                    <span>303</span>
                 </div>
                 <div class="btn">
                     <a href="#">Pagar con</a>
@@ -99,7 +97,7 @@
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: '350.00'
+                                value: '303.00'
                             }
                         }]
                     });
