--- a/producto9.html
+++ b/producto9.html
@@ -66,25 +66,24 @@
 
     <div class="card">
         <div class="imgBox">
-            <img src="imagenes/c4extreme.jpg" alt="c4extreme">
+            <img src="imagenes/insanelabz-wake-the-dead-smelling-salts.jpg" alt="Wake Salts">
         </div>
         <div class="details">
             <div class="title">
-                <h3>C4 Extreme <br>
-                    <small>Rendimiento Extremo para Hombres y Mujeres</small>
+                <h3>Wake The Dead Smelling Salts <br>
+                    <small>DESPIERTA A LOS MUERTOS PARA OBTENER EL MEJOR ELEVACIÓN DE TU VIDA</small>
                 </h3>
             </div>
             <div class="description">
                 <h4>Descripción</h4>
-                <p>Creado para desbloquear energía y resultados de siguiente nivel, C4 Extreme fue formulado con fórmulas limpias, claras y evolucionadas para un pre-entreno de rendimiento explosivo.<br>
-                    200mg de cafeína que brindan energía explosiva ideal para usuarios de nivel intermedio a avanzado en pre-entreno<br>
-                    Formulado para apoyar con energía, bombeos y resistencia.
+                <p>Las sales aromáticas Wake the Dead son una sal aromática POTENTE (mejorada con menta verde), desarrollada por Mad Chemist para ayudarte a conseguir tu mejor efecto. Nuestras sales aromáticas, cuando se hidratan de acuerdo con la etiqueta, liberan gas amoniaco, lo que provoca un fuerte reflejo de inhalación. Este reflejo hace que los músculos que controlan la respiración trabajen más rápido, mientras que también activa el sistema nervioso simpático, lo que aumenta la frecuencia cardíaca, la presión arterial y la actividad cerebral.
+
                 </p>
             </div>
             <div class="buy">
                 <div class="price">
                     <sup>$</sup>
-                    <span>350</span>
+                    <span>162</span>
                 </div>
                 <div class="btn">
                     <a href="#">Pagar con</a>
@@ -99,7 +98,7 @@
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: '350.00'
+                                value: '162.00'
                             }
                         }]
                     });
