--- a/Producto.html
+++ b/Producto.html
@@ -124,6 +124,13 @@
                 </div>
                 <form id="reviewForm">
                     <textarea id="userReview" placeholder="Escribe tu reseña aquí"></textarea>
+                    <div class="rating">
+                        <input type="radio" id="star5" name="rating" value="5"><label for="star5" title="5 stars"></label>
+                        <input type="radio" id="star4" name="rating" value="4"><label for="star4" title="4 stars"></label>
+                        <input type="radio" id="star3" name="rating" value="3"><label for="star3" title="3 stars"></label>
+                        <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="2 stars"></label>
+                        <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="1 star"></label>
+                    </div>
                     <button type="submit">Enviar reseña</button>
                 </form>
             </div>
