--- a/Producto.html
+++ b/Producto.html
@@ -131,7 +131,7 @@
                         <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="2 stars"></label>
                         <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="1 star"></label>
                     </div>
-                    <button type="submit">Enviar reseña</button>
+                    <button type="submit" class="button-review">Enviar reseña</button>
                 </form>
             </div>
         </div>
