--- a/Producto.html
+++ b/Producto.html
@@ -125,11 +125,11 @@
                 <form id="reviewForm">
                     <textarea id="userReview" placeholder="Escribe tu reseña aquí"></textarea>
                     <div class="rating">
-                        <input type="radio" id="star5" name="rating" value="5"><label for="star5" title="5 stars"></label>
-                        <input type="radio" id="star4" name="rating" value="4"><label for="star4" title="4 stars"></label>
-                        <input type="radio" id="star3" name="rating" value="3"><label for="star3" title="3 stars"></label>
-                        <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="2 stars"></label>
-                        <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="1 star"></label>
+                        <input type="radio" id="estrella5" name="rating" value="5"><label for="estrella5" title="5 estrellas"></label>
+                        <input type="radio" id="estrella4" name="rating" value="4"><label for="estrella4" title="4 estrellas"></label>
+                        <input type="radio" id="estrella3" name="rating" value="3"><label for="estrella3" title="3 estrellas"></label>
+                        <input type="radio" id="estrella2" name="rating" value="2"><label for="estrella2" title="2 estrellas"></label>
+                        <input type="radio" id="estrella1" name="rating" value="1"><label for="estrella1" title="1 estrella"></label>
                     </div>
                     <button type="submit" class="button-review">Enviar reseña</button>
                 </form>
@@ -207,7 +207,7 @@
             const userRating = document.querySelector('input[name="rating"]:checked');
 
             if (userReviewText !== "" && userRating) {
-                const reviewWithRating = `${userReviewText} (${userRating.value} stars)`;
+                const reviewWithRating = `${userReviewText} (${userRating.value} estrellas)`;
                 displayUserReview(reviewWithRating);
                 userReviewInput.value = "";
                 userRating.checked = false;
