--- a/Admin.html
+++ b/Admin.html
@@ -78,7 +78,7 @@ tr:nth-child(even) {
       <nav>
         <ul>
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">Categorias</a></li>
+          <li><a href="CRUDCategorias.html">Categorias</a></li>
           <li><a href="index.html">Cerrar Sesión</a></li>
         </ul>
       </nav>
