Historial de ordenes

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <li><a href="#">Contacto</a></li>
                     <li><a href="Login.html">Login</a></li>
                     <li><a href="Registro.html">Registro</a></li>
+                    <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                 </ul>
                 <form class="search-form">
                     <input type="search" placeholder="Buscar..."/>
@@ -501,7 +502,7 @@
                     <p class="title-footer"> Mi cuenta</p>
                     <ul>
                         <li><a href="#">Mi cuenta</a></li>
-                        <li><a href="#">Historial de ordenes</a></li>
+                        <li><a href="Ordenenes.html">Historial de ordenes</a></li>
                         <li><a href="#">Lista de deseos</a></li>
                     </ul>
                 </div>
