--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                     <p class="title-footer"> Mi cuenta</p>
                     <ul>
                         <li><a href="#">Mi cuenta</a></li>
-                        <li><a href="Ordenenes.html">Historial de ordenes</a></li>
+                        <li><a href="Ordenes.html">Historial de ordenes</a></li>
                         <li><a href="#">Lista de deseos</a></li>
                     </ul>
                 </div>
