--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <i class="fa-solid fa-bars"></i>
                 <ul class="menu">
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
+                    <li><a href="productos.html">Productos</a></li>
                     <li><a href="#">Lista de Deseos</a></li>
                     <li><a href="#">Contacto</a></li>
                     <li><a href="Login.html">Login</a></li>
