Redireccioné el comprar ahora

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section class="banner">
         <div class="content-banner">
             <p>Alcanza tus sueños fitness con nuestros suplementos</p>
-            <a href="#">Comprar ahora</a>
+            <a href="productos.html">Comprar ahora</a>
         </div>
     </section>
 
