Pagina de cuenta y enlaces

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 <div class="my-account">
                     <p class="title-footer"> Mi cuenta</p>
                     <ul>
-                        <li><a href="#">Mi cuenta</a></li>
+                        <li><a href="Cuenta.html">Mi cuenta</a></li>
                         <li><a href="Ordenes.html">Historial de ordenes</a></li>
                         <li><a href="#">Lista de deseos</a></li>
                     </ul>
