--- a/Ordenes.html
+++ b/Ordenes.html
@@ -548,7 +548,7 @@
                 <div class="my-account">
                     <p class="title-footer"> Mi cuenta</p>
                     <ul>
-                        <li><a href="#">Mi cuenta</a></li>
+                        <li><a href="Cuenta.html">Mi cuenta</a></li>
                         <li><a href="#">Historial de ordenes</a></li>
                         <li><a href="#">Lista de deseos</a></li>
                     </ul>
