--- a/Cuenta.html
+++ b/Cuenta.html
@@ -485,7 +485,7 @@
                 </div>
                 <div class="container-logo">
                     <i class="fa-solid fa-dumbbell"></i>
-                    <h1 class="logo"><a href="/"> NutriGym Shop</a></h1>
+                    <h1 class="logo"><a href="index.html"> NutriGym Shop</a></h1>
                 </div>
                 <div class="container_user">
                     <i class="fa-solid fa-user"></i>
@@ -503,12 +503,11 @@
                 <i class="fa-solid fa-bars"></i>
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
+                    <li><a href="productos.html">Productos</a></li>
                     <li><a href="#">Lista de Deseos</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                     <li><a href="Login.html">Login</a></li>
                     <li><a href="Registro.html">Registro</a></li>
-                    <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                 </ul>
                 <form class="search-form">
                     <input type="search" placeholder="Buscar..." />
@@ -522,8 +521,8 @@
 
     <div class="navigation-buttons">
         <a href="Ordenes.html" class="navigation-button">Mis órdenes de Compra</a>
-        <a href="#deseos" class="navigation-button">Mi lista de Deseos</a>
-        <a href="index.html" class="navigation-button">Salir</a>
+        <a href="#" class="navigation-button">Mi lista de Deseos</a>
+        <a href="Login.html" class="navigation-button">Salir</a>
     </div>
 
   <section>
@@ -572,8 +571,6 @@
                         target="_blank" class="facebook">
                         <span class="facebook"> <i class="fa-brands fa-facebook"></i></span>
                     </a>
-                    <span class="instagram"> <i class="fa-brands fa-instagram"></i> </span>
-                    <span class="twitter"> <i class="fa-brands fa-twitter"></i> </span>
                 </div>
             </div>
             <div class="information">
