--- a/Ordenes.html
+++ b/Ordenes.html
@@ -457,7 +457,7 @@
                     </div>
                     <div class="container-logo">
                         <i class="fa-solid fa-dumbbell"></i>
-                        <h1 class="logo"><a href="/"> NutriGym Shop</a></h1>
+                        <h1 class="logo"><a href="index.html"> NutriGym Shop</a></h1>
                     </div>
                     <div class="container_user">
                         <i class="fa-solid fa-user"></i>
@@ -528,8 +528,6 @@
                             target="_blank" class="facebook">
                             <span class="facebook"> <i class="fa-brands fa-facebook"></i></span>
                         </a>
-                        <span class="instagram"> <i class="fa-brands fa-instagram"></i> </span>
-                        <span class="twitter"> <i class="fa-brands fa-twitter"></i> </span>
                     </div>
                 </div>
                 <div class="information">
