--- a/productos.html
+++ b/productos.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="container-logo">
                     <i class="fa-solid fa-dumbbell"></i>
-                    <h1 class="logo"><a href="/"> NutriGym Shop</a></h1>
+                    <h1 class="logo"><a href="index.html"> NutriGym Shop</a></h1>
                 </div>
                 <div class="container_user">
                     <i class="fa-solid fa-user"></i>
@@ -47,9 +47,10 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="#">Lista de Deseos</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                     <li><a href="Login.html">Login</a></li>
                     <li><a href="Registro.html">Registro</a></li>
+                    <li><a href="Cuenta.html">Mi Cuenta</a></li>
                 </ul>
                 <form class="search-form">
                     <input type="search" placeholder="Buscar..." />
@@ -133,8 +134,7 @@
                             target="_blank" class="facebook">
                             <span class="facebook"> <i class="fa-brands fa-facebook"></i></span>
                         </a>
-                        <span class="instagram"> <i class="fa-brands fa-instagram"></i> </span>
-                        <span class="twitter"> <i class="fa-brands fa-twitter"></i> </span>
+                        
                     </div>
                 </div>
                 <div class="information">
@@ -148,8 +148,8 @@
                 <div class="my-account">
                     <p class="title-footer"> Mi cuenta</p>
                     <ul>
-                        <li><a href="#">Mi cuenta</a></li>
-                        <li><a href="#">Historial de ordenes</a></li>
+                        <li><a href="Cuenta.html">Mi cuenta</a></li>
+                        <li><a href="Ordenes.html">Historial de ordenes</a></li>
                         <li><a href="#">Lista de deseos</a></li>
                     </ul>
                 </div>
