--- a/producto5.html
+++ b/producto5.html
@@ -30,7 +30,7 @@
                 </div> 
                 <div class="container-logo">
                     <i class="fa-solid fa-dumbbell"></i>
-                    <h1 class="logo"><a href="/"> NutriGym Shop</a></h1>
+                    <h1 class="logo"><a href="index.html"> NutriGym Shop</a></h1>
                 </div>
                 <div class="container_user">
                     <i class="fa-solid fa-user"></i>
@@ -48,11 +48,12 @@
                 <i class="fa-solid fa-bars"></i>
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
+                    <li><a href="productos.html">Productos</a></li>
                     <li><a href="#">Lista de Deseos</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Registro</a></li>
+                    <li><a href="Ordenes.html">Historial de Ordenes</a></li>
+                    <li><a href="Login.html">Login</a></li>
+                    <li><a href="Registro.html">Registro</a></li>
+                    <li><a href="Cuenta.html">Mi Cuenta</a></li>
                 </ul>
                
             </nav>
@@ -125,8 +126,6 @@
                         <a href= "https://www.facebook.com/profile.php?id=61553337389807&viewas=&show_switched_toast=false&show_switched_tooltip=false&is_tour_dismissed=false&is_tour_completed=false&show_podcast_settings=false&show_community_review_changes=false&should_open_composer=false&badge_type=NEW_MEMBER&show_community_rollback_toast=false&show_community_rollback=false&show_follower_visibility_disclosure=false&bypass_exit_warning=true" target="_blank" class="facebook">
                             <span class="facebook"> <i class="fa-brands fa-facebook"></i></span>
                         </a>
-                        <span class="instagram"> <i class="fa-brands fa-instagram"></i> </span>
-                        <span class="twitter"> <i class="fa-brands fa-twitter"></i> </span>
                     </div>
                 </div>
                 <div class="information">
@@ -140,8 +139,8 @@
                 <div class="my-account">
                     <p class="title-footer"> Mi cuenta</p>
                     <ul>
-                        <li><a href="#">Mi cuenta</a></li>
-                        <li><a href="#">Historial de ordenes</a></li>
+                        <li><a href="Cuenta.html">Mi cuenta</a></li>
+                        <li><a href="Ordenes.html">Historial de ordenes</a></li>
                         <li><a href="#">Lista de deseos</a></li>
                     </ul>
                 </div>
