--- a/Ordenes.html
+++ b/Ordenes.html
@@ -534,7 +534,7 @@
                     <p class="title-footer"> Informacion</p>
                     <ul>
                         <li><a href="#"> Acerca de nosotros</a></li>
-                        <li><a href="#"> Politica de privacidad</a></li>
+                        <li><a href="Politicas.html"> Politica de privacidad</a></li>
                         <li><a href="#"> Terminos y condiciones</a></li>
                     </ul>
                 </div>
